--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
           </p>
           <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-              <img src="../image/cyborg-animate.svg" alt="image animation">
+              <img src="./image/cyborg-animate.svg" alt="image animation">
             </div>
             <div class="col-lg-6">
               <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
@@ -247,7 +247,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="flip-left">
             <img
-              src="../image/learn robotics (1).jpg"
+              src="./image/learn robotics (1).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -265,7 +265,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="flip-left">
             <img
-              src="../image/learn robotics (1).jpg"
+              src="./image/learn robotics (1).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -283,7 +283,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="flip-left">
             <img
-              src="../image/learn robotics (1).jpg"
+              src="./image/learn robotics (1).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -301,7 +301,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="flip-left">
             <img
-              src="../image/learn robotics (1).jpg"
+              src="./image/learn robotics (1).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -319,7 +319,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="zoom-in-left">
             <img
-              src="../image/learn robotics (2).jpg"
+              src="./image/learn robotics (2).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -337,7 +337,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="zoom-in-left">
             <img
-              src="../image/learn robotics (2).jpg"
+              src="./image/learn robotics (2).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -355,7 +355,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="zoom-in-left">
             <img
-              src="../image/learn robotics (2).jpg"
+              src="./image/learn robotics (2).jpg"
               class="card-img-top"
               alt="..."
             />
@@ -373,7 +373,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
           <div class="card" data-aos="zoom-in-left">
             <img
-              src="../image/learn robotics (2).jpg"
+              src="./image/learn robotics (2).jpg"
               class="card-img-top"
               alt="..."
             />
