--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Bootstrap website" />
+    <meta
+      property="og:description"
+      content="Responsive left-aligned hero with image"
+    />
+    <meta
+      property="og:image"
+      content="src/image/picbootstrap.png?raw=true"
+    />
+    <meta
+      property="og:url"
+      content="https://kea-daron.github.io/bootstrap-web-design/"
+    />
+    <meta property="og:type" content="website" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
