--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       property="og:image"
-      content="src/image/picbootstrap.png?raw=true"
+      content="https://github.com/kea-daron/Pic-bootstrap/blob/main/picbootstrap.png?raw=true"
     />
     <meta
       property="og:url"
